--- a/1/src/app/film-catalog/films/films.component.html
+++ b/1/src/app/film-catalog/films/films.component.html
@@ -6,10 +6,10 @@
 		<div class='info'>
 			<h2>{{item.name}}</h2>
 			<p class='year'>{{item.year}}</p>
-			<p>{{item.description}}</p>
+			<p>{{ item.description | slice:0:256 }}</p>
 			<div class='btn-block'>
 				<button mat-button>Открыть</button>
-                <button mat-button>Редактировать</button>
+				<button mat-button>Редактировать</button>
 			</div>
 		</div>
 	</div>
@@ -35,5 +35,3 @@
             </mat-card>
     </mat-grid-tile>      
   </mat-grid-list> -->
-
-
