--- a/1/src/styles.css
+++ b/1/src/styles.css
@@ -1,5 +1,4 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
 body {
     margin: 0;
     font-family: Roboto, sans-serif;
@@ -9,4 +8,8 @@ mat-card {
     max-width: 80%;
     margin: 2em auto;
     text-align: center;
-  }
+}
+
+.mat-button {
+    min-width: auto !important;
+}
