--- a/1/src/app/film-catalog/films/films.component.html
+++ b/1/src/app/film-catalog/films/films.component.html
@@ -6,7 +6,7 @@
 		<div class='info'>
 			<h2>{{item.name}}</h2>
 			<p class='year'>{{item.year}}</p>
-			<p>{{ item.description | slice:0:256 }}</p>
+			<p>{{ (item.description.length > 150) ? (item.description | slice:0:150) + '...' : (item.description) }}</p>
 			<div class='btn-block'>
 				<button mat-button>Открыть</button>
 				<button mat-button>Редактировать</button>
