--- a/2/src/app/film-catalog/film-item/film-item.component.html
+++ b/2/src/app/film-catalog/film-item/film-item.component.html
@@ -1,3 +1,16 @@
-<p>
-  film-item works!
-</p>
+<div class='block'>
+  <div class='cards' *ngFor="let item of items">
+    <div>
+      <img src="{{item.imgUrl}}" alt="">
+    </div>
+    <div class='info'>
+      <h2>{{item.name}}</h2>
+      <p class='year'>{{item.year}}</p>
+      <p>{{ (item.description.length > 150) ? (item.description | slice:0:150) + '...' : (item.description) }}</p>
+      <div class='btn-block'>
+        <button mat-button>Открыть</button>
+        <button mat-button>Редактировать</button>
+      </div>
+    </div>
+  </div>
+</div>
