--- a/2/src/app/film-catalog/film-item/film-item.component.html
+++ b/2/src/app/film-catalog/film-item/film-item.component.html
@@ -1,12 +1,12 @@
 <div class='block'>
-  <div class='cards' *ngFor="let item of items">
+  <div class='cards'>
     <div>
-      <img src="{{item.imgUrl}}" alt="">
+      <img src="{{imgUrl}}" alt="">
     </div>
     <div class='info'>
-      <h2>{{item.name}}</h2>
-      <p class='year'>{{item.year}}</p>
-      <p>{{ (item.description.length > 150) ? (item.description | slice:0:150) + '...' : (item.description) }}</p>
+      <h2>{{name}}</h2>
+      <p class='year'>{{year}}</p>
+      <!-- <p>{{ (description.length > 150) ? (description | slice:0:150) + '...' : (description) }}</p> -->
       <div class='btn-block'>
         <button mat-button>Открыть</button>
         <button mat-button>Редактировать</button>
