--- a/2/src/app/film-catalog/film-item/film-item.component.html
+++ b/2/src/app/film-catalog/film-item/film-item.component.html
@@ -1,12 +1,12 @@
 <div class='block'>
   <div class='cards'>
     <div>
-      <img src="{{imgUrl}}" alt="">
+      <img src="{{film.imgUrl}}" alt="">
     </div>
     <div class='info'>
-      <h2>{{name}}</h2>
-      <p class='year'>{{year}}</p>
-      <!-- <p>{{ (description.length > 150) ? (description | slice:0:150) + '...' : (description) }}</p> -->
+      <h2>{{film.name}}</h2>
+      <p class='year'>{{film.year}}</p>
+      <p>{{ (film.description.length > 150) ? (film.description | slice:0:150) + '...' : (film.description) }}</p>
       <div class='btn-block'>
         <button mat-button>Открыть</button>
         <button mat-button>Редактировать</button>
