--- a/2/src/app/film-catalog/films-list/films-list.component.html
+++ b/2/src/app/film-catalog/films-list/films-list.component.html
@@ -18,12 +18,14 @@
 </mat-card>
   
   
-<mat-grid-list cols="4" rowHeight="600px">
-  <app-film-item
-    [data]="film" 
-    
-    *ngFor="let film of films">
-  </app-film-item>
-</mat-grid-list>
+<div class="container">
+  <div class="row card-wrap">
+    <app-film-item
+      [data]="film" 
+      
+      *ngFor="let film of films">
+    </app-film-item>
+  </div> 
+</div>
 
 
