redo favorite list

--- a/2/src/app/film-catalog/film-item/film-item.component.html
+++ b/2/src/app/film-catalog/film-item/film-item.component.html
@@ -8,8 +8,10 @@
       <p class='year'>{{film.year}}</p>
       <p>{{ (film.description.length > 150) ? (film.description | slice:0:150) + '...' : (film.description) }}</p>
       <div class='btn-block'>
-        <button mat-button>Открыть</button>
-        <button mat-button>Редактировать</button>
+        <button mat-button (click)="favoriteToggle()">
+          <span *ngIf="!favorite; else removeFavorite">Добавить в избранное</span>
+          <ng-template #removeFavorite>Удалить из избранного</ng-template>          
+        </button>      
       </div>
     </div>
   </div>
