done favorite part

--- a/2/src/app/film-catalog/film-item/film-item.component.html
+++ b/2/src/app/film-catalog/film-item/film-item.component.html
@@ -8,10 +8,8 @@
       <p class='year'>{{film.year}}</p>
       <p>{{ (film.description.length > 150) ? (film.description | slice:0:150) + '...' : (film.description) }}</p>
       <div class='btn-block'>
-        <button mat-button (click)="favoriteToggle()">
-          <span *ngIf="!favorite; else removeFavorite">Добавить в избранное</span>
-          <ng-template #removeFavorite>Удалить из избранного</ng-template>          
-        </button>      
+        <button mat-button
+          (click)="addToFavorites(film)">{{film.isFavorite ? 'Удалить из избранного' : 'Добавить в избранное'}}</button>
       </div>
     </div>
   </div>
