--- a/2/src/app/film-catalog/films-list/films-list.component.css
+++ b/2/src/app/film-catalog/films-list/films-list.component.css
@@ -1,12 +1,6 @@
-.card-wrap {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 
-.example-card {
-    max-width: 300px;
-}
+
+
 
 .menu-card {
   padding: 0px;
@@ -14,8 +8,19 @@
 
 .menu-toolbar {
   background-color: white;
+  min-height: 50px;
+  height: 50px;
 }
 
 .example-spacer {
   flex: 1 1 auto;
+}
+
+.cards-section {
+  max-width: 80%;
+  margin: 2em auto;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
