--- a/3/src/app/film-catalog/films-list/films-list.component.html
+++ b/3/src/app/film-catalog/films-list/films-list.component.html
@@ -19,8 +19,10 @@
 </mat-card>
   
 
-<div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-between">
-  <app-film-item fxFlex="30%" [data]="film" (updateCounter)="addFilmObj()" *ngFor="let film of films"></app-film-item>
+<div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-between"
+  fxLayoutAlign.lt-sm="center">
+  <app-film-item fxFlex="32%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film" (updateCounter)="addFilmObj()"
+    *ngFor="let film of films"></app-film-item>
 </div>
 
 
