--- a/3/src/styles.css
+++ b/3/src/styles.css
@@ -5,6 +5,10 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+.row {
+    width: 100%;
+}
+
 mat-card {
     max-width: 80%;
     margin: 2em auto;
