--- a/3/src/app/modules/films-catalog/films-list/films-list.component.html
+++ b/3/src/app/modules/films-catalog/films-list/films-list.component.html
@@ -27,7 +27,7 @@
   ></app-film-item>
 
   <div class="row" fxLayout="row" fxLayoutAlign="center">
-    <button mat-raised-button color="primary">Показать еще</button>
+    <button mat-raised-button color="primary" (click)="nextPage()">Показать еще</button>
   </div>
 </div>
 
