--- a/3/src/app/modules/films-catalog/films-list/films-list.component.html
+++ b/3/src/app/modules/films-catalog/films-list/films-list.component.html
@@ -26,7 +26,7 @@
     *ngFor="let film of films"
   ></app-film-item>
 
-  <div class="row" fxLayout="row" fxLayoutAlign="center">
+  <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
     <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabled()'>Показать еще</button>
   </div>
 </div>
