rename method for event

--- a/3/src/app/modules/films-catalog/films-list/films-list.component.html
+++ b/3/src/app/modules/films-catalog/films-list/films-list.component.html
@@ -29,7 +29,8 @@
 </mat-card>
 
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-  <app-film-item fxFlex="32%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film" (updateCounter)="addFilmToFavorit()"
+  <app-film-item fxFlex="32%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film"
+    (updateListOfFavorite)="addFilmToFavorit()"
     *ngFor="let film of films"></app-film-item>
 
   <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
