--- a/3/src/app/modules/films-catalog/films-list/films-list.component.html
+++ b/3/src/app/modules/films-catalog/films-list/films-list.component.html
@@ -30,10 +30,20 @@
   </mat-toolbar>
 </mat-card>
 
-<div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-  <app-film-item fxFlex="32%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film"
-    (updateListOfFavorite)="addFilmToFavorit()"
-    *ngFor="let film of films"></app-film-item>
+<div 
+  class="cards-section" 
+  fxLayout="row wrap" 
+  fxLayoutAlign="space-evenly"
+  fxLayoutAlign.lt-sm="center"
+ >
+  <app-film-item 
+    fxFlex="32%" 
+    fxFlex.lt-sm="100%" 
+    fxFlex.lt-md="45%" 
+    [data]="film"
+    (updateListOfFavorite)="addFilmToFavorit()"    
+    *ngFor="let film of films"
+  ></app-film-item>
 
   <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
     <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabled()'>Показать еще</button>
