call function for cearch

--- a/3/src/app/shared/components/search/search.component.html
+++ b/3/src/app/shared/components/search/search.component.html
@@ -1,7 +1,8 @@
 <mat-form-field class="search-form-field">
   <input matInput type="text" placeholder="Поиск по названию фильма" [(ngModel)]="searchValue"
     (keyup)="changeSearchValue()">
-  <button mat-button *ngIf="searchValue" matSuffix mat-icon-button aria-label="Clear" (click)="searchValue=''">
+  <button mat-button *ngIf="searchValue" matSuffix mat-icon-button aria-label="Clear"
+    (click)="searchValue=''; changeSearchValue()">
     <mat-icon>close</mat-icon>
   </button>
 </mat-form-field>
