--- a/3/src/app/shared/components/film-item/film-item.component.html
+++ b/3/src/app/shared/components/film-item/film-item.component.html
@@ -6,7 +6,8 @@
     <div class='info'>
       <h2>{{film.name}}</h2>
       <p class='year'>{{film.year}}</p>
-      <p>{{ (film.description.length > 150) ? (film.description | slice:0:150) + '...' : (film.description) }}</p>
+      <p class="description">
+        {{ (film.description.length > 150) ? (film.description | slice:0:180) + '...' : (film.description) }}</p>
       <div class='btn-block'>
         <button mat-button (click)="addToFavorites()">{{film.isFavorite ? 'Удалить из избранного' : 'Добавить в избранное'}}</button>
       </div>
