--- a/3/src/styles.css
+++ b/3/src/styles.css
@@ -1,8 +1,9 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap');
 
 body {
     margin: 0;
-    font-family: Roboto, sans-serif;
+    font-family: 'Montserrat', sans-serif; 
     overflow: overlay;
 }
 
@@ -11,9 +12,18 @@ body {
 }
 
 mat-card {
-    max-width: 80%;
+    max-width: 90%;
     margin: 2em auto;
     text-align: center;
+}
+
+.mat-toolbar,
+.mat-toolbar-row,
+.mat-button,
+.mat-form-field,
+.mat-option,
+.mat-raised-button {
+    font-family: 'Montserrat', sans-serif;
 }
 
 
