--- a/3/src/app/modules/films-catalog/films-list/films-list.component.html
+++ b/3/src/app/modules/films-catalog/films-list/films-list.component.html
@@ -2,9 +2,11 @@
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row 
       fxLayout="row" 
-      fxLayoutAlign="space-between center">
+      fxLayoutAlign="space-between center"
+    >
+
       <div class="favorite-section">
-        <span *ngIf="countElement; else noFavorits">В избранное добавлено: {{countElement}}</span>
+        <span *ngIf="countFavorite; else noFavorits">В избранное добавлено: {{countFavorite}}</span>
         <ng-template #noFavorits><span>У вас нет избранного</span></ng-template>
       </div>
 
@@ -43,6 +45,7 @@
   
 
   <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-    <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabled()'>Показать еще</button>
+    <button mat-raised-button color="primary" (click)="nextPage()"
+      [disabled]='isDisabled()'>Показать еще</button>
   </div>
 </div>
