--- a/4/movie-app/src/app/app.component.html
+++ b/4/movie-app/src/app/app.component.html
@@ -2,12 +2,15 @@
   <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="space-between center">
     <span>Film Catalog</span>
     <div>
-      <a mat-button *ngFor="let link of links" [routerLink]="link.path" [routerLinkActive]="link.active">
+      <a 
+        mat-button 
+        *ngFor="let link of links" 
+        [routerLink]="link.path" 
+        [routerLinkActive]="link.active">
         <mat-icon class="icon">{{link.icon}}</mat-icon>
         <span class="nav">{{link.label}}</span>
       </a>
     </div>
-
   </mat-toolbar-row>
 </mat-toolbar>
 
