--- a/4/movie-app/src/app/films-catalog/films-list/film-item/film-item.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/film-item/film-item.component.html
@@ -1,7 +1,7 @@
 <div class='block'>
   <div class='cards'>
     <div>
-      <img src="https://image.tmdb.org/t/p/w500{{film.poster_path}}" alt="">
+      <img src="{{imgUrl + film.poster_path}}" alt="">
     </div>
     <div class='info'>
       <h2>{{film.original_title}}</h2>
