add favorite shared component

--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -1,8 +1,8 @@
 <mat-card class="menu-card">
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
-      <!-- <app-favotite-count [favotite]="countFavorite"></app-favotite-count>
-      <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>
+      <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
+   <!--   <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>
       <app-sorting-items [page]="countPage" [data]="films" (updateSortingData)="updateData($event)"></app-sorting-items> -->
     </mat-toolbar-row>
   </mat-toolbar>
