--- a/4/movie-app/src/app/films-catalog/films-list/film-item/film-item.component.scss
+++ b/4/movie-app/src/app/films-catalog/films-list/film-item/film-item.component.scss
@@ -1,10 +1,12 @@
 .block {
   /* margin: 5% 0; */
+  height: 100%;
 }
 
 .cards {
   display: flex;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  height: 100%;
 }
 
 .cards div:first-child {
@@ -19,6 +21,7 @@
 .cards img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .info {
@@ -54,4 +57,12 @@ h2 {
 button {
   font-size: .7vw;
   margin: auto;
+}
+
+.mat-card-actions {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 0;
+  text-align: center;
 }
