--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -2,8 +2,9 @@
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
-   <!--   <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>
-      <app-sorting-items [page]="countPage" [data]="films" (updateSortingData)="updateData($event)"></app-sorting-items> -->
+   <!--   <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>-->
+      <!-- <app-sorting [page]="countPage" [data]="films" (updateSortingData)="updateData($event)"></app-sorting>  -->
+      <app-sorting></app-sorting>
     </mat-toolbar-row>
   </mat-toolbar>
 </mat-card>
@@ -11,6 +12,8 @@
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
   <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film"
     (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films"></app-film-item>
+
+    
   <!-- <ng-container *ngIf="films.length === 0">
     <div class="mb-2em">Результат поиска не дал результата.</div>
   </ng-container> -->
