--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -4,16 +4,27 @@
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
    <!--   <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>-->
       <!-- <app-sorting [page]="countPage" [data]="films" (updateSortingData)="updateData($event)"></app-sorting>  -->
-      <app-sorting></app-sorting>
+      <app-sorting (updateSortingData)="updateData($event)"></app-sorting>
     </mat-toolbar-row>
   </mat-toolbar>
 </mat-card>
 
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
-  <!-- <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film"
-    (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films"></app-film-item> -->
-  <app-actor-item class="mb-2em" fxFlex="22%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="actor"
+  <ng-container *ngIf="visibleContent">
+    <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film"
+      (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films" >
+      </app-film-item>
+  </ng-container>
+  
+  <ng-container *ngIf="!visibleContent">
+      <app-actor-item class="mb-2em" fxFlex="22%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="actor"
     *ngFor="let actor of actors"></app-actor-item>
+  </ng-container>
+  
+  
+
+
+
 
   <!-- <ng-container *ngIf="films.length === 0">
     <div class="mb-2em">Результат поиска не дал результата.</div>
