--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -11,26 +11,38 @@
 
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
   <ng-container *ngIf="visibleContent">
-    <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="film"
-      (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films" >
-      </app-film-item>
-  </ng-container>
-  
+    <app-film-item 
+      class="mb-2em" 
+      fxFlex="30%" 
+      fxFlex.lt-md="45%" 
+      fxFlex.lt-sm="100%" 
+      [data]="film"
+      (updateListOfFavorite)="addFilmToFavorit($event)" 
+      *ngFor="let film of films" 
+    >
+    </app-film-item>
+  </ng-container>  
   <ng-container *ngIf="!visibleContent">
-      <app-actor-item class="mb-2em" fxFlex="22%" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" [data]="actor"
-    *ngFor="let actor of actors"></app-actor-item>
+      <app-actor-item 
+        class="mb-2em" 
+        fxFlex="22%" 
+        fxFlex.lt-md="45%"
+        fxFlex.lt-sm="100%" 
+        [data]="actor"
+        *ngFor="let actor of actors"
+      >
+      </app-actor-item>
   </ng-container>
-  
-  
-
-
 
 
   <!-- <ng-container *ngIf="films.length === 0">
     <div class="mb-2em">Результат поиска не дал результата.</div>
   </ng-container> -->
 
-  <!-- <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-    <button mat-raised-button color="primary" (click)="nextPage()" [disabled]='isDisabled()'>Показать еще</button>
-  </div> -->
+  <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+    <button mat-raised-button color="primary" (click)="nextPage($event)" *ngIf="visibleContent"
+      [disabled]='isDisabled'>Показать еще</button>
+  </div>
 </div>
+
+
