--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -21,6 +21,9 @@
       *ngFor="let film of films" 
     >
     </app-film-item>
+    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+      <button mat-raised-button color="primary" (click)="nextPage($event)" [disabled]='isDisabled'>Показать еще</button>
+    </div>
   </ng-container>  
   <ng-container *ngIf="!visibleContent">
       <app-actor-item 
@@ -39,10 +42,10 @@
     <div class="mb-2em">Результат поиска не дал результата.</div>
   </ng-container> -->
 
-  <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+  <!-- <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
     <button mat-raised-button color="primary" (click)="nextPage($event)" *ngIf="visibleContent"
       [disabled]='isDisabled'>Показать еще</button>
-  </div>
+  </div> -->
 </div>
 
 
