--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
-   <!--   <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>-->
+      <!--   <app-search [page]="countPage" (updateSearchData)="updateData($event)"></app-search>-->
       <!-- <app-sorting [page]="countPage" [data]="films" (updateSortingData)="updateData($event)"></app-sorting>  -->
       <app-sorting (updateSortingData)="updateData($event)"></app-sorting>
     </mat-toolbar-row>
@@ -11,30 +11,22 @@
 
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
   <ng-container *ngIf="visibleContent">
-    <app-film-item 
-      class="mb-2em" 
-      fxFlex="30%" 
-      fxFlex.lt-md="45%" 
-      fxFlex.lt-sm="100%" 
-      [data]="film"
-      (updateListOfFavorite)="addFilmToFavorit($event)" 
-      *ngFor="let film of films" 
-    >
+    <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film"
+      (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
     </app-film-item>
     <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-      <button mat-raised-button color="primary" (click)="nextPage($event)" [disabled]='isDisabled'>Показать еще</button>
+      <button mat-raised-button color="primary" (click)="nextFilmsPage()" [disabled]='isDisabledFilmsBtn'>Показать
+        еще</button>
     </div>
-  </ng-container>  
+  </ng-container>
   <ng-container *ngIf="!visibleContent">
-      <app-actor-item 
-        class="mb-2em" 
-        fxFlex="22%" 
-        fxFlex.lt-md="45%"
-        fxFlex.lt-sm="100%" 
-        [data]="actor"
-        *ngFor="let actor of actors"
-      >
-      </app-actor-item>
+    <app-actor-item class="mb-2em" fxFlex="22%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
+      *ngFor="let actor of actors">
+    </app-actor-item>
+    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
+      <button mat-raised-button color="primary" (click)="nextActorsPage()" [disabled]='isDisabledActorsBtn'>Показать
+        еще</button>
+    </div>
   </ng-container>
 
 
@@ -47,5 +39,3 @@
       [disabled]='isDisabled'>Показать еще</button>
   </div> -->
 </div>
-
-
