work with search component

--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -2,7 +2,8 @@
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
-      <app-search [data]="films" [page]="currentFilmsPage" (updateSearchData)="searchData($event)"></app-search>
+      <app-search [data]="films" [page]="currentFilmsPage"
+        (updateSearchData)="searchData($event)"></app-search>
       <app-sorting (updateSortingData)="updateData($event)"></app-sorting>
     </mat-toolbar-row>
   </mat-toolbar>
