--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
       <app-search [data]="films" [page]="currentFilmsPage"
-        (updateSearchData)="searchData($event)"></app-search>
+        (updateSearchData)="searchData($event)" (updateBtnShowElse)="updateBtn($event)"></app-search>
       <app-sorting (updateSortingData)="updateData($event)"></app-sorting>
     </mat-toolbar-row>
   </mat-toolbar>
@@ -15,8 +15,8 @@
       (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
     </app-film-item>
     <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-      <button mat-raised-button color="primary" (click)="nextFilmsPage()" [disabled]='isDisabledFilmsBtn'>Показать
-        еще</button>
+      <button mat-raised-button color="primary" (click)="nextFilmsPage()" [disabled]='isDisabledFilmsBtn'
+        >Показать еще</button>
     </div>
   </ng-container>
   <ng-container *ngIf="!visibleContent">
