--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -2,8 +2,12 @@
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
       <app-favorite-count [favorite]="countFavorite"></app-favorite-count>
-      <app-search [data]="films" [page]="currentFilmsPage"
-        (updateSearchData)="searchData($event)" (updateBtnShowElse)="updateBtn($event)"></app-search>
+      <app-search 
+        [data]="films" 
+        [page]="currentFilmsPage"
+        (updateSearchData)="searchData($event)" 
+        (updateBtnShowElse)="updateBtn($event)"
+      ></app-search>
       <app-sorting (updateSortingData)="updateData($event)"></app-sorting>
     </mat-toolbar-row>
   </mat-toolbar>
@@ -36,3 +40,9 @@
 
 
 </div>
+
+<div class="loader" *ngIf="spiner">
+  <mat-spinner></mat-spinner>
+</div>
+
+
