--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.scss
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.scss
@@ -16,3 +16,16 @@
   max-width: 90%;
   margin: 2em auto;
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba($color: #000000, $alpha: 0.2)
+}
