work with list of films

--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -18,6 +18,9 @@
     <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film"
       (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
     </app-film-item>
+    <ng-container *ngIf="films.length === 0">
+      <div class="mb-2em">Результат поиска не дал результата.</div>
+    </ng-container>
     <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
       <button mat-raised-button color="primary" (click)="nextFilmsPage()" [disabled]='isDisabledFilmsBtn'
         >Показать еще</button>
@@ -34,15 +37,11 @@
   </ng-container>
 
 
-  <!-- <ng-container *ngIf="films.length === 0">
-    <div class="mb-2em">Результат поиска не дал результата.</div>
-  </ng-container> -->
+
 
 
 </div>
 
-<div class="loader" *ngIf="spiner">
-  <mat-spinner></mat-spinner>
-</div>
+<app-spiner *ngIf="spiner"></app-spiner>
 
 
