--- a/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
+++ b/4/movie-app/src/app/films-catalog/films-list/films-list.component.html
@@ -14,7 +14,8 @@
 </mat-card>
 
 <div class="cards-section" fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.lt-sm="center">
-  <ng-container *ngIf="visibleContent">
+
+  <ng-container *ngIf="visibleContent; else actorsVisible">
     <app-film-item class="mb-2em" fxFlex="30%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film"
       (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
     </app-film-item>
@@ -26,7 +27,8 @@
         >Показать еще</button>
     </div>
   </ng-container>
-  <ng-container *ngIf="!visibleContent">
+
+  <ng-template #actorsVisible>  
     <app-actor-item class="mb-2em" fxFlex="22%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
       *ngFor="let actor of actors">
     </app-actor-item>
@@ -34,11 +36,7 @@
       <button mat-raised-button color="primary" (click)="nextActorsPage()" [disabled]='isDisabledActorsBtn'>Показать
         еще</button>
     </div>
-  </ng-container>
-
-
-
-
+  </ng-template>
 
 </div>
 
